kubernetes/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app
  labels:
    app: chat-app

spec:
  replicas: 3
  selector:
    matchLabels:
      app: chat-app
  
  template:
    metadata:
      labels:
        app: chat-app
    
    spec:
      containers:
      - name: chat-app
        image: shahil050/chatapp:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 7860
