kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-app-service

spec:
  selector:
    app: chat-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 7860
