kubernetes/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: chatapp

spec:
  to:
    kind: Service
    name: chatapp

  port:
    targetPort: 8080
